# sermas

./: .dockerignore  .env.example  .gitignore  .hintrc  .markdownlint.json  .pre-commit-config.yaml  Avatar.Containerfile  CONTRIBUTING.md  Eva.Containerfile  Makefile  README.md  SECURITY.md  compose.example.yaml  eva.README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yaml  image.yaml  test.yaml
avatar/: AliveOnD-ID.csproj  AliveOnD-ID.sln  Program.cs  README.md  appsettings.Development.json  appsettings.json
avatar/Controllers/: AvatarController.cs  LLMController.cs  SessionController.cs  SpeechController.cs
avatar/Controllers/Requests/: AddMessageRequest.cs  CloseStreamRequest.cs  CreateSessionRequest.cs  CreateStreamRequest.cs  SendIceCandidateRequest.cs  SendScriptRequest.cs  StartStreamRequest.cs  TestLLMRequest.cs  TestLLMWithSessionRequest.cs
avatar/Controllers/Responses/: ASRResponse.cs  DIDStreamCreateResponse.cs  DIDStreamResponse.cs  LLMResponse.cs
avatar/Models/: AvatarStreamInfo.cs  ChatMessage.cs  ChatSession.cs  IceServer.cs  LogEntry.cs  enums.cs
avatar/Models/Chat/: EVEErrorResponse.cs  EVEMessageResponse.cs  EVEStartConversationMessage.cs  EVEUserMessage.cs
avatar/Models/Configurations/: AzureSpeechServicesConfig.cs  ChatConfig.cs  DIDConfig.cs  LLMConfig.cs  RedisConfig.cs  ServiceConfiguration.cs
avatar/Properties/: launchSettings.json
avatar/Services/: ASRService.cs  AvatarStreamService.cs  BaseHttpService.cs  ChatSessionService.cs  LLMService.cs  MessageAccumulator.cs  PendingRequest.cs  StorageService.cs  WebSocketLLMService.cs
avatar/Services/Interfaces/: IASRService.cs  IAvatarStreamService.cs  IChatSessionService.cs  ILLMService.cs  IStorageService.cs
avatar/Services/Models/: BackgroundConfigData.cs  ConfigData.cs  CropConfigData.cs  DIDIceServer.cs  PresenterConfigData.cs  ProviderData.cs  RectangleConfigData.cs  ScriptData.cs  VoiceConfigData.cs
avatar/wwwroot/: avatar-chat.js  index.html
docs/: api-reference.md  client-examples.md  getting-started.md  index.md
docs/sermas/: architecture.md  deployment.md  introduction.md
eva/: __init__.py  _logging.py  _version.py  admin.py  auth.py  config.py  main.py  models.py
eva/db/: __init__.py  _aiosqlite.py  _base.py  _postgres.py
eva/llm/: __init__.py  _anthropic.py  _base.py  _openai.py  prompts.py  utils.py
eva/rag/: __init__.py  _base.py  _chroma_local.py  _chroma_remote.py  _pdf.py  loader.py
eva/static/: admin.html
requirements/: dev.txt  docs.txt  main.txt  test.txt
scripts/: __init__.py  clean.py  header.py  image.py  requirements.py
tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_main.py
tests/db/: __init__.py  test_aiosqlite.py  test_postgres.py
tests/llm/: __init__.py  test_anthropic.py  test_base.py  test_openai.py  test_prompt.py  test_utils.py
tests/rag/: __init__.py  test_base.py  test_chroma_local.py  test_loader.py  test_pdf.py
